--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "license": "MIT",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-autoprefixer": "^3.0.3",
     "grunt-contrib-connect": "^0.11.2",
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-imagemin": "^0.9.4",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-newer": "^1.1.1",
+    "grunt-px-to-rem": "^0.4.0",
     "grunt-sass": "^1.0.0",
     "grunt-sync": "^0.2.4",
     "grunt-webfont": "^0.5.4"
